 + (Experience) You can now set guaranteed minimum values for XP gained if diminishing returns are enabled, this value defaults to 5% (experience.yml)
 + (Events) Starting an XP event will now use the title API (toggle this in advanced.yml)
 + (Sound) Volume and Pitch of sounds can now be configured in the new sounds.yml file
 + (MySQL) Added support for SSL for MySQL/MariaDB (On by default)
 ! (Skills) Taming's Gore now uses Bleed Rank 1 for its DoT
 ! (Skills) Sword's Rupture now ticks four times as fast
 ! (Skills) Sword's Bleed has been renamed to Rupture
 ! (Skills) Sword's Rupture now reaches its max proc chance at level 20 (200 in Retro)
 ! (Skills) Sword's Rupture now has a max chance to proc of 33% instead of 70%
 ! (Skills) Sword's Rupture now deals 50% more damage at above Rank 3 and can last much longer! The base damage for Bleed has been increased as well (update your advanced.yml admins)
 ! (Skills) Sword's Rupture no longer triggers invincibility frames when damaging your opponent
 + (Skills) Ability Lengths now have a default skill cap at which they stop increasing in length, configurable in advanced.yml (endurance perks extend this limit)
 + (Skills) Added a new subskill to some skills 'Understanding The Art' this adds nothing new, but tracks benefits that increase together that seemed unrelated, which was previously a bit obfuscated.
 + (Skills) Tool alerts now are sent to the Action Bar
 + (Skills) Super Ability activation alerts are now sent to the Action Bar
 + (Skills) Certain Skill messages are now sent to the Action Bar
 + (Skills) Added some missing information to skill stats
 + (Config) Skill Rank requirements are now defined in skillranks.yml you cannot add or remove ranks from this file
 + (Config) Added option to use SSL for MySQL in config.yml
 + (Config) Added option to disable the new URL links to config.yml
 + (Config) New config file added coreskills.yml
 + (Config) Added rank settings for the new Woodcutting skill