@@ -35,9 +35,10 @@ Version 2.1.0
  + (Events) Starting an XP event will now use the title API (toggle this in advanced.yml)
  + (Sound) Volume and Pitch of sounds can now be configured in the new sounds.yml file
  + (MySQL) Added support for SSL for MySQL/MariaDB (On by default)
- ! (Skills) Taming's Gore now uses Bleed Rank 1 for its DoT
- ! (Skills) Sword's Rupture now ticks four times as fast
+ ! (Skills) Taming's Gore now uses Rupture Rank 1 for its DoT
  ! (Skills) Sword's Bleed has been renamed to Rupture
+ ! (Skills) Sword's Rupture now ticks four times as fast
+ = (Skills) Fixed a bug where Rupture would apply an incorrect amount of bleed ticks
  ! (Skills) Sword's Rupture now reaches its max proc chance at level 20 (200 in Retro)
  ! (Skills) Sword's Rupture now has a max chance to proc of 33% instead of 70%
  ! (Skills) Sword's Rupture now deals 50% more damage at above Rank 3 and can last much longer! The base damage for Bleed has been increased as well (update your advanced.yml admins)
